@@ -139,8 +139,10 @@ public abstract class Menu {
         try {
             if (System.getProperty("os.name").contains("Windows"))
                 new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
-            else
-                Runtime.getRuntime().exec("clear");
+            else {
+                new ProcessBuilder("clear").inheritIO().start().waitFor();
+//                Runtime.getRuntime().exec("clear");
+            }
         } catch (IOException | InterruptedException ignored) {}
 
     }
